--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Welcome"
-    android:textSize="30dp"
+    android:textSize="25dp"
     />
 
     <TextView
@@ -19,6 +19,61 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+
         />
+
+    <TextView
+        android:id="@+id/tbScore"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+       android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        android:textSize="20sp"
+        />
+    <TextView
+        android:id="@+id/tbQuestion"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="45dp"
+        android:textSize="20sp"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_margin="70dp"
+        />
+    <Button
+        android:id="@+id/btnAns1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:text="Button"
+        />
+
+    <Button
+        android:id="@+id/btnAns2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        />
+
+    <Button
+        android:id="@+id/btnAns3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        />
+
+    <Button
+        android:id="@+id/btnAns4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        />
+
 
 </LinearLayout>
